good starting point using swagger
